examples/core/errors/05_bare_dollar.core.tao
// Parse Error: Dollar without type
// Dollar must be followed by an identifier (type name)
$
